fix more mobile-layout issues

--- a/src/main/assets/less/core.less
+++ b/src/main/assets/less/core.less
@@ -500,7 +500,13 @@ label {
 }
 
 .jd-btn-block {
-  width: 100%;
+  width: calc(~'100% - 8px');
+}
+.jd-btn-block + .jd-btn-block {
+  margin-bottom: 8px;
+}
+.jd-mobile .jd-btn-block {
+  margin-left: 0;
 }
 .jd-job-list {
   text-align: left;
@@ -550,4 +556,12 @@ md-toast.md-toast-error-theme .md-toast-content{
 }
 form .filter-button-container {
   margin-top: 0;
+}
+
+.md-has-icon.isco-select {
+  padding-left: 0;
+}
+
+.my-location-button {
+  text-align: right;
 }
